--- a/ANS-parkingLot/src/App.css
+++ b/ANS-parkingLot/src/App.css
@@ -1,10 +1,23 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #262626;;
   padding: 30px;
   color: #333;
-  background-image:url("./img/10078817.png");
+  background-image: url("./img/bg.png");
   background-size: cover;
+  margin: 0;
+}
 
+.AppContainer {
+  display: flex;
+  position: relative;
+}
 
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding-top: 60px; 
+  position: relative;
+  z-index: 0; 
 }
