--- a/ANS-parkingLot/src/components/pages/MainMenu.module.css
+++ b/ANS-parkingLot/src/components/pages/MainMenu.module.css
@@ -1,29 +1,69 @@
+.MainBox {
+  position: relative;
+}
 
+.navBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #333;
+  transition: transform 0.3s ease;
+  z-index: 1; /* O menu lateral está abaixo do header, mas acima do conteúdo */
+}
+
+.navBar.collapsed {
+  transform: translateX(-250px); /* Esconde o menu */
+}
+
+.navBar.expanded {
+  transform: translateX(0); /* Expande o menu */
+}
 
 .menu {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 750px;
-    height: 400px;
-    margin: 0 auto;
-    border-radius: 12px;
-    margin-top: 50px;
-    padding: 20px 30px;
-    background: rgba(255, 255, 255, 0.2); 
-    backdrop-filter: blur(10px); 
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3); 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    text-align: center; 
+  padding: 20px;
 }
 
-.list{
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    align-items:end;
-    justify-content: center;
-
+.toggleButton {
+  position: absolute;
+  top: 20px;
+  right: -30px;
+  background-color: #0056b3;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
+.arrowIcon {
+  font-size: 20px;
+}
+
+.list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.list li {
+  margin: 20px 0;
+}
+
+.list li a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.list li a:hover {
+  background-color: #444;
+  padding-left: 10px;
+  transition: 0.3s;
+}
