--- a/ANS-parkingLot/src/components/pages/Parking.module.css
+++ b/ANS-parkingLot/src/components/pages/Parking.module.css
@@ -1,17 +1,20 @@
 .mainContainer {
-    width: 100vw; /* ocupa exatamente a largura da viewport */
-    max-width: 100vw; /* impede ultrapassar a largura da tela */
+    display: flex;
+    flex-direction: column;
+    width: 100vw; 
+    max-width: 100vw; 
     margin: 0 auto;
     padding: 1rem;
     box-sizing: border-box;
-    overflow-x: hidden; /* impede rolagem horizontal */
+    overflow-x: hidden; 
+    
   }
   
   /* Cada carrossel */
   .carousel {
     display: flex;
     flex-wrap: nowrap;
-    gap: 16px;
+    gap: 8px;
     overflow-x: auto;
     overflow-y: hidden;
     padding: 16px 0;
@@ -39,16 +42,34 @@
   }
   
   .cardButton {
-    margin-top: 12px;
-    background-color: #2563eb;
-    color: white;
-    border: none;
-    padding: 8px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  display: block;
+  margin-top: 15px;
+  font-size: 1.2rem;
+}
+
+.cardButton:hover {
+  background-color: #0056b3;
+}
+
+.cardButton:active {
+  background-color: #003c80;
+}
   
   .dragging {
     cursor: grabbing;
     user-select: none;
+  }
+
+  h1{
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #f4f4f4;;
+
   }
